--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
             android:name=".activities.MainActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".activities.Screen1Activity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.Screen2Activity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
