--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ExamplePM1">
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".ui.activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,15 +21,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activities.Screen1Activity"
+            android:name=".ui.activities.Screen1Activity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activities.Screen2Activity"
+            android:name=".ui.activities.Screen2Activity"
             android:exported="true">
         </activity>
     </application>
